--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "eslint src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
-    "jest": "jest  --forceExit"
+    "jest": "jest  --forceExit",
+    "web": "node src/"
   },
   "standard": {
     "env": [
