--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"]
+    "quotes": ["error", "double"],
+    "semi": ["error", "always"],
+    "no-unused-vars": 1
   }
 }
