--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "test": "npm run lint && npm run jest",
     "lint": "eslint src/. test/. --config .eslintrc.json",
+    "lint-fix": "eslint --fix src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
     "jest": "jest  --forceExit",
