--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run lint && npm run jest",
+    "test": "npm run lint && npm run mocha",
+    "coverage": "nyc npm run mocha",
+    "clean": "shx rm -rf test/data/",
     "lint": "eslint src/. test/. --config .eslintrc.json",
     "lint-fix": "eslint --fix src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
-    "jest": "jest  --forceExit",
+    "mocha": "npm run clean && mocha test/ --recursive --exit",
     "web": "node src/"
   },
   "standard": {
     "env": [
-      "jest"
+      "mocha"
     ],
     "ignore": []
   },
@@ -62,7 +64,9 @@
   "devDependencies": {
     "axios": "^0.19.2",
     "eslint": "^6.8.0",
-    "jest": "^26.0.1",
-    "nodemon": "^2.0.4"
+    "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
+    "shx": "^0.3.2"
   }
 }
