--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint-fix": "eslint --fix src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
-    "mocha": "npm run clean && mocha test/ --recursive --exit",
+    "mocha": "npm run clean && mocha test/ --timeout 6000 --recursive --exit",
     "web": "node src/"
   },
   "standard": {
@@ -53,16 +53,20 @@
     "@hapi/joi": "^17.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-authentication-management": "^2.0.1",
     "feathers-hooks-common": "^5.0.3",
+    "feathers-mailer": "^3.0.1",
     "feathers-nedb": "^5.1.0",
     "helmet": "^3.22.0",
     "nedb": "^1.8.0",
     "nodemailer": "^6.4.8",
+    "nodemailer-smtp-transport": "^2.7.4",
     "serve-favicon": "^2.5.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "axios": "^0.19.2",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
