--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint-fix": "eslint --fix src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
-    "mocha": "npm run clean && mocha test/ --timeout 6000 --recursive --exit",
+    "mocha": "npm run clean && mocha test/ --timeout 12000 --recursive --exit",
     "web": "node src/"
   },
   "standard": {
@@ -53,6 +53,7 @@
     "@hapi/joi": "^17.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-authentication-hooks": "^1.0.2",
     "feathers-authentication-management": "^2.0.1",
     "feathers-hooks-common": "^5.0.3",
     "feathers-mailer": "^3.0.1",
