--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "nodemailer": "^6.4.8",
     "nodemailer-smtp-transport": "^2.7.4",
     "serve-favicon": "^2.5.0",
+    "uuid": "^8.2.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
