generate thumbnail for pdf on the server using imagemagick

--- a/package.json
+++ b/package.json
@@ -53,19 +53,17 @@
     "@hapi/joi": "^17.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dauria": "^2.0.0",
     "feathers-authentication-hooks": "^1.0.2",
     "feathers-authentication-management": "^2.0.1",
     "feathers-blob": "^2.2.0",
     "feathers-hooks-common": "^5.0.3",
     "feathers-mailer": "^3.0.1",
     "feathers-nedb": "^5.1.0",
-    "fs-blob-store": "^5.2.1",
     "helmet": "^3.22.0",
     "multer": "^1.4.2",
     "nedb": "^1.8.0",
-    "nodemailer": "^6.4.8",
     "nodemailer-smtp-transport": "^2.7.4",
+    "pdf-image": "^2.0.0",
     "serve-favicon": "^2.5.0",
     "uuid": "^8.2.0",
     "winston": "^3.2.1"
