--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@feathersjs/socketio": "^4.5.4",
     "@feathersjs/transport-commons": "^4.5.3",
     "@hapi/joi": "^17.1.1",
+    "ajv": "^7.0.4",
+    "ajv-errors": "^2.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-authentication-hooks": "^1.0.2",
@@ -60,6 +62,7 @@
     "feathers-mailer": "^3.0.1",
     "feathers-nedb": "^5.1.0",
     "helmet": "^3.22.0",
+    "mingo": "^4.1.0",
     "multer": "^1.4.2",
     "nedb": "^1.8.0",
     "nodemailer-smtp-transport": "^2.7.4",
